testsuite/bsc.typechecker/SignatureTooGeneral.bs.bsc-out.expected
checking package dependencies
compiling SignatureTooGeneral.bs
Error: "SignatureTooGeneral.bs", line 6, column 6: (T0020)
  Type mismatch
  Expected type:
    a

  Inferred type:
    Prelude.Integer

